// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render in checked state 1`] = `
<span
  class="radio"
>
  <input
    checked=""
    type="radio"
  />
  <span />
</span>
`;

exports[`The component should render in unchecked state 1`] = `
<span
  class="radio"
>
  <input
    type="radio"
  />
  <span />
</span>
`;
